Wrong stitching in Pipeline::addFinalSource()

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • QE 2025-07-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-104224 introduced the bug. Instead of setting the parent of the new last stage,  the previous last stage sets its parent to itself. This can influence how the pipeline is disposed (i.e, not all stages are disposed) if the pipeline is never stitched again.

            Assignee:
            Daniel Tabacaru
            Reporter:
            Daniel Tabacaru
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: