SERVER-106836 Fix stitching in Pipeline::addFinalSource() (#37864)

GitOrigin-RevId: 5b9ddb8c611043d189224ce5fafa1368d72caa0d